# UR5e_Vision_Assemble

./: .gitignore  .gitmodules  LICENSE  README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/controller/share/controller/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/robotiq_description/share/robotiq_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ur5e_gripper_description/share/ur5e_gripper_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ur5e_gripper_moveit_config/share/ur5e_gripper_moveit_config/: .setup_assistant  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ur_description/share/ur_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build  latest_list
src/bringup/: CMakeLists.txt  package.xml
src/bringup/launch/: simulation.launch.py
src/controller/: CMakeLists.txt
src/controller/src/: ctrl_main.cpp
src/libs/gazebo_grasp_plugin/: CMakeLists.txt
src/libs/gazebo_grasp_plugin/src/: GazeboGraspFix.cpp  GazeboGraspGripper.cpp
src/libs/gazebo_grasp_plugin_ros/: CMakeLists.txt  package.xml
src/libs/gazebo_grasp_plugin_ros/msg/: grasp_event.pb.h
src/libs/gazebo_grasp_plugin_ros/src/: grasp_event_republisher.cpp
src/libs/gazebo_version_helpers/: CMakeLists.txt  package.xml
src/ur5e_gripper/dual_ur5e_gripper_moveit_config/: CMakeLists.txt  package.xml
src/ur5e_gripper/dual_ur5e_gripper_moveit_config/config/: dual_ur5e_gripper_controllers.yaml  joint_limits.yaml  kinematics.yaml  left_initial_positions.yaml  moveit_controllers.yaml  ompl_planning.yaml
src/ur5e_gripper/dual_ur5e_gripper_moveit_config/gazebo/: dual_ur5e.world  sim_env.world
src/ur5e_gripper/dual_ur5e_gripper_moveit_config/gazebo/blue_box/: model.config  model.sdf
src/ur5e_gripper/dual_ur5e_gripper_moveit_config/gazebo/brick_cube/: model.config  model.sdf
src/ur5e_gripper/dual_ur5e_gripper_moveit_config/gazebo/green_cube/: model.config  model.sdf
src/ur5e_gripper/dual_ur5e_gripper_moveit_config/gazebo/red_box/: model.config  model.sdf
src/ur5e_gripper/dual_ur5e_gripper_moveit_config/gazebo/red_cube/: model.config  model.sdf
src/ur5e_gripper/dual_ur5e_gripper_moveit_config/gazebo/turquoise_box/: model.config  model.sdf
src/ur5e_gripper/dual_ur5e_gripper_moveit_config/launch/: dual_ur5e_gripper_moveit.launch.py  dual_ur5e_gripper_sim_control.launch.py  dual_ur5e_gripper_sim_moveit.launch.py  gazebo_no_moveit.launch.py  test_launch_gazebo.launch.py  view_robot.launch.py
src/ur5e_gripper/dual_ur5e_gripper_moveit_config/rviz/: view_robot.rviz
src/ur5e_gripper/dual_ur5e_gripper_moveit_config/srdf/: dual_ur5e_gripper.srdf.xacro
src/ur5e_gripper/dual_ur5e_gripper_moveit_config/urdf/: dual_ur5e_gripper.urdf.xacro  single_ur5e_gripper.urdf.xacro  test.urdf
src/ur5e_gripper/robotiq_description/: CMakeLists.txt  package.xml
src/ur5e_gripper/robotiq_description/config/: robotiq_controllers.yaml
src/ur5e_gripper/robotiq_description/launch/: gazebo_gripper.launch.py  view_gripper.launch.py
src/ur5e_gripper/robotiq_description/src/: test_gripper_in_gazebo.cpp
src/ur5e_gripper/robotiq_description/urdf/: 2f_85.ros2_control.xacro  robotiq_2f_85_gripper.urdf.xacro  robotiq_2f_85_macro.urdf.xacro  test.urdf
src/ur5e_gripper/robotiq_moveit_config/: CMakeLists.txt  package.xml
src/ur5e_gripper/robotiq_moveit_config/srdf/: robotiq_macro.srdf.xacro
src/ur5e_gripper/ur5e_gripper_description/: CMakeLists.txt  package.xml
src/ur5e_gripper/ur5e_gripper_description/config/: ur5e_gripper_controllers.yaml
src/ur5e_gripper/ur5e_gripper_description/launch/: gazebo_ur5e_gripper.launch.py  view_ur5e_gripper.launch.py
src/ur5e_gripper/ur5e_gripper_description/rviz/: view_ur5e_gripper.rviz
src/ur5e_gripper/ur5e_gripper_description/urdf/: initial_positions.yaml.bak  ur5e_gripper.urdf  ur5e_gripper.urdf.xacro
src/ur5e_gripper/ur5e_gripper_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/ur5e_gripper/ur5e_gripper_moveit_config/config/: controllers.yaml  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml  ur5e_gripper.ros2_control.xacro  ur5e_gripper.srdf  ur5e_gripper.urdf.xacro
src/ur5e_gripper/ur5e_gripper_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  ur5e_gripper_moveit.launch.py  ur5e_gripper_sim_control.launch.py  ur5e_gripper_sim_moveit.launch.py  warehouse_db.launch.py
src/ur5e_gripper/ur5e_gripper_moveit_config/srdf/: ur5e_gripper.srdf.xacro
src/ur5e_gripper_control/: CMakeLists.txt  package.xml
src/ur5e_gripper_control/config/: left_target_pose_list.yaml  pyramid_pose_list.yaml  target_pose_list.yaml
src/ur5e_gripper_control/include/ur5e_gripper_control/: dual_ur5e_gripper.h
src/ur5e_gripper_control/launch/: demo1.launch.py  demo2.launch.py  demo3.launch.py  demo4.launch.py  dual_ur5e_gripper_sim_control.launch.py  motion_planning.launch.py  ur5e_gripper_sim_moveit.launch.py
src/ur5e_gripper_control/src/: demo1.cpp  demo3.cpp  demo4.cpp  dual_ur5e_gripper.cpp  motion_planning.cpp  move_group.cpp  pick_and_place.cpp  test_dual.cpp  test_moveit.cpp
src/vision/: README.md  package.xml  setup.cfg  setup.py
src/vision/launch/: register_depth.launch.py  seg_and_det.launch.py
src/vision/rviz/: depth_register.rviz
src/vision/vision/: det_tf.py  get_image_test.py  image_process.py  obj_detect.py  obj_seg.py  record.py  test_rs.py  test_sync.py  wait_for_message.py
(+237 files in other folders)
