<?xml version="1.0"?>
<package format="3">
  <name>gazebo_grasp_plugin_ros</name>
  <version>0.0.1</version>
  <description>The gazebo_grasp_plugin_ros package</description>

  <maintainer email="jennifer.e.buehler@gmail.com">Jennifer Buehler</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/JenniferBuehler/gazebo-pkgs</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>gazebo_dev</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_msgs</depend>
  <depend>gazebo_grasp_plugin</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
